--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2025-10-07T13:27:13.046475659Z",
-     "start_time": "2025-10-07T13:27:12.847123689Z"
+     "end_time": "2025-10-07T21:58:22.593511278Z",
+     "start_time": "2025-10-07T21:58:22.192860106Z"
     }
    },
    "cell_type": "code",
@@ -49,7 +49,7 @@
      ]
     }
    ],
-   "execution_count": 26
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -59,8 +59,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-07T13:27:13.264683588Z",
-     "start_time": "2025-10-07T13:27:13.099450085Z"
+     "end_time": "2025-10-07T21:58:22.868882957Z",
+     "start_time": "2025-10-07T21:58:22.609228418Z"
     }
    },
    "cell_type": "code",
@@ -87,7 +87,7 @@
      "output_type": "stream",
      "text": [
       "Current player's name and role: Player X, X\n",
-      "Ai move: Point[row=1, col=2]\n",
+      "Ai move: Point[row=2, col=1]\n",
       "Current player's name and role: Player O, O\n"
      ]
     },
@@ -97,23 +97,75 @@
        "In Progress"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 27
+   "execution_count": 5
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "TicTacToeBoard logic"
+   "source": "Min Max AI Implementation"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-07T13:27:13.526291012Z",
-     "start_time": "2025-10-07T13:27:13.289055788Z"
+     "end_time": "2025-10-07T21:58:23.402627253Z",
+     "start_time": "2025-10-07T21:58:23.002341734Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import org.example.tictactoe.games.impl.MinMaxAiTicTacToeGame\n",
+    "\n",
+    "// Also implements AIMove interface but it's smart, when I was testing it, second try it won. It implements MinMax algorithm for finding the best move\n",
+    "var minMaxAiGame = MinMaxAiTicTacToeGame()\n",
+    "minMaxAiGame.start()\n",
+    "\n",
+    "println(\"Current player's name and role: ${randomAiGame.currentPlayerName}, ${randomAiGame.currentPlayerType}\")\n",
+    "randomAiGame.move(1, 1)\n",
+    "\n",
+    "val res = randomAiGame.makeMove()\n",
+    "println(\"Ai move: $res\")\n",
+    "\n",
+    "println(\"Current player's name and role: ${randomAiGame.currentPlayerName}, ${randomAiGame.currentPlayerType}\")\n",
+    "randomAiGame.move(res.row, res.col);"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current player's name and role: Player X, X\n",
+      "Ai move: Point[row=0, col=2]\n",
+      "Current player's name and role: Player O, O\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "In Progress"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "TicTacToeBoard logic\n"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-07T21:58:24.085805962Z",
+     "start_time": "2025-10-07T21:58:23.587536634Z"
     }
    },
    "cell_type": "code",
@@ -146,7 +198,7 @@
      ]
     }
    ],
-   "execution_count": 28
+   "execution_count": 7
   }
  ],
  "metadata": {
